--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "react-dom": "^19.2.1",
     "react-hook-form": "^7.54.2",
     "react-markdown": "^9.0.1",
+    "react-quill": "^2.0.0",
     "recharts": "^2.15.1",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7",
@@ -66,5 +67,11 @@
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
+  },
+  "overrides": {
+    "react-quill": {
+      "react": "$react",
+      "react-dom": "$react-dom"
+    }
   }
 }
