--- a/package.json
+++ b/package.json
@@ -39,6 +39,11 @@
     "@radix-ui/react-toggle-group": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.8",
     "@tailwindcss/typography": "^0.5.14",
+    "@tiptap/extension-bubble-menu": "^2.6.2",
+    "@tiptap/extension-character-count": "^2.6.2",
+    "@tiptap/extension-placeholder": "^2.6.2",
+    "@tiptap/react": "^2.6.2",
+    "@tiptap/starter-kit": "^2.6.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
@@ -53,7 +58,6 @@
     "react-dom": "^19.2.1",
     "react-hook-form": "^7.54.2",
     "react-markdown": "^9.0.1",
-    "react-quill": "^2.0.0",
     "recharts": "^2.15.1",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7",
@@ -67,11 +71,5 @@
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
-  },
-  "overrides": {
-    "react-quill": {
-      "react": "$react",
-      "react-dom": "$react-dom"
-    }
   }
 }
